﻿2004-02-23  shadow  <shadowin@users.sourceforge.jp>

        * user/userlib/userlib.cpp: printf(if 0)書換え。

2004-02-23  higepon  <higepon@users.sourceforge.jp>

        * kernel.cpp: これ以降は当分カーネルは動きません。

2004-02-23  shadow  <shadowin@users.sourceforge.jp>

        * user/userlib/monalibc.c: vsprintf修正。strcpy2追加。

        * user/include/userlib/monalibc.h: strcpy2追加。

2004-02-20  higepon  <higepon@users.sourceforge.jp>

        * ちょっとだけArrayを使ってみた。

        * Process.cpp: プロセス・スケジューラー周り全部作り直し

        * Queue追加

2004-02-18  higepon  <higepon@users.sourceforge.jp>

        * user/userlib/string.cpp: strcat

        * Process.cpp: idleスレッドの中でhltするようにした

        * user/userlib/monalibc.c: 追加。

2004-02-15  higepon  <higepon@users.sourceforge.jp>

        * VesaConsole.cpp: VesaConsole 黄色い線が出る件修正(Gakuさん)

        * syscalls.cpp : ディスクイメージ構成を大幅に変えた。

2004-02-14  higepon  <higepon@users.sourceforge.jp>

        * kernel.cpp (printOK): オセロ追加人同士の対戦のみサポート

2004-02-12  higepon  <higepon@users.sourceforge.jp>

        * user/userlib.cpp: Observer/Observable追加 さて何に使うのでしょうか？

        * user/clock.cpp: 時刻取得追加

        * Message::receiveを変更。メッセージキューがからの場合はCPUを明け渡す

        * Process.cpp: メッセージ待ちyiledを追加。

2004-02-11  higepon  <higepon@users.sourceforge.jp>

        * Process.cpp: noiz2bgのバグ修正 thx nikqさん

        * kernel.cpp: 最適化オプション-O3

        * Process.cpp: Threadにwaitとwakeupを作った。でもまだ載せていない。

        * kernel.cpp: gccの最適化オプション-O2でビルドするようにした。

2004-02-10  higepon  <higepon@users.sourceforge.jp>

        * Process.cpp: Shellが引数をもてるようになった。

        * MonaMain関数が引数をもてるようになった

        * syscalls.cpp : FDアクセス箇所にセマフォでロックを追加。

        * FDCDriver.cpp: モーターの制御を追加。

2004-02-09  higepon  <higepon@users.sourceforge.jp>

        * user/userlib.cpp: printfのバグ修正

        * syscalls.cpp : プロセスexit();時のバグをやっと修正
                         原因はプロセスが代わったかどうかの isProcessChangedが問題だった。

        * include/collection.h: Arrayクラス作成

        * send時にfromを自動セット。
