@@ -122,12 +122,14 @@ public:
 public:
     bool schedule();
     bool schedule2();
+    void tick();
     void join(Thread* thread, int priority = 30);
     int kill(Thread* thread);
     int wait(Thread* thread, int waitReason);
     int wakeup(Thread* thread, int waitReason);
-    void tick();
     dword getTick() const;
+    Process* findProcess(dword pid);
+    Process* findProcess(const char* name);
 
 private:
     int calcPriority(Thread* thread);
@@ -138,7 +140,6 @@ protected:
     dword tickTotal;
     int monaMin;
 };
-
 
 /*----------------------------------------------------------------------
     Node
